<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <android.support.v7.preference.CheckBoxPreference
        android:key="@string/usb_debug_key"
        android:summary="@string/usb_debug_mode_summary"
        android:title="@string/usb_debug_mode_title" />

    <android.support.v7.preference.Preference
        android:key="@string/application_management_key"
        android:title="@string/application_management_title" />

    <android.support.v7.preference.Preference
        android:key="@string/drm_setting_key"
        android:title="@string/drm_setting_title" />

    <android.support.v7.preference.CheckBoxPreference
        android:key="@string/unknown_resource_key"
        android:summary="@string/unknown_resource_summary"
        android:title="@string/unknown_resource_title" />

    <android.support.v7.preference.Preference
        android:key="@string/calibration_key"
        android:title="@string/calibration_title" />

    <android.support.v7.preference.ListPreference
        android:key="@string/key_binding_key"
        android:title="@string/key_binding_title" />

    <android.support.v7.preference.ListPreference
        android:key="@string/long_press_feature_key"
        android:entries="@array/long_press_feature_summary"
        android:entryValues="@array/long_press_feature_value"
        android:title="@string/dpad_center_long_press_title" />

</android.support.v7.preference.PreferenceScreen>
