<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/alert_dialog_wifi_connected"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/text_view_signal_level_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wifi_signal"
            android:textAppearance="@style/TextAppearance.Design.Hint" />

        <TextView
            android:id="@+id/text_view_signal_level"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wifi_connected" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/text_view_security_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wifi_security"
            android:textAppearance="@style/TextAppearance.Design.Hint" />

        <TextView
            android:id="@+id/text_view_security"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

</LinearLayout>