<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/alert_dialog_wifi_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/network_ssid"
        app:hintAnimationEnabled="false"
        app:hintEnabled="true">

        <EditText
            android:id="@+id/edit_text_ssid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />
    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/text_view_security_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wifi_security"
            android:textAppearance="@style/TextAppearance.Design.Hint" />

        <Spinner
            android:id="@+id/spinner_view_security"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:entries="@array/wifi_add_access_point_security"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/wifi_security_input_area"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/wifi_password"
            app:hintAnimationEnabled="false"
            app:hintEnabled="true">

            <EditText
                android:id="@+id/edit_text_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />
        </android.support.design.widget.TextInputLayout>

        <CheckBox
            android:id="@+id/cb_show_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wifi_show_password"
            android:textAppearance="@style/OnyxAppCompat.TextAppearance.Light.Small" />
    </LinearLayout>

</LinearLayout>